span tags naar meter elements #2

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,25 @@ html{
 body{
 
     --main-font: "Outfit";
+    
+    --first-font-color: #0257ff;
+    --second-font-color: #5D666A;
+    --third-font-color: #87929F;
+
+    /* font-size-headings */
+    --font-size-xxl: 96px;
+    --font-size-xl: 64px;
+    --font-size-l: 48px;
+    --font-size-m: 32px;
+    --font-size-s: 24px;
+    --font-size-xs: 16px;
+
+    /* font-weight */
+    --light-font-weight: 200;
+    --standard-font-weight: 400;
+    --semibold-font-weight: 500;
+    --bold-font-weight: 600; 
+
 
     margin: 0;
     background-color: rgb(241, 241, 241);
@@ -136,6 +155,11 @@ h1{
 
 h2{
     font-family: var(--main-font);
+    color: var(--third-font-color);
+    font-weight: var(--light-font-weight);
+    font-size: var(--font-size-xs);
+    margin: 0;
+    padding: 32px 32px 0px;
 }
 
 p{
@@ -159,6 +183,16 @@ header{
     padding: 32px 32px;
     position: sticky;
     top: 0;
+    z-index: 100;
+}
+
+.ad-logo{
+    color: var(--first-font-color);
+    display: flex;
+    align-items: center;
+    position: relative;
+    left: -45px;
+    font-size: var(--font-size-s);
 }
 
 .dashboard{
@@ -176,5 +210,14 @@ header{
     color: blue;
     font-weight: 600;
 }
+
+#dashboardtitle{
+    font-size: var(--font-size-m);
+    color: var(--second-font-color);
+    margin: 0;
+    font-size: xxx-large;
+    padding-left: 32px;
+}
+
 
 
