--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ height: 32px;
 cursor: pointer; 
 margin-left: auto; }
 
-@media all and (min-width: 1100px) { 
+@media all and (min-width: 750px) { 
 
 .hamburger, .hamburger-class {
     display: none; }
@@ -259,6 +259,7 @@ meter.is-visible {
 		transparent 0
 	);
 }
+
 
 .button{
     margin: 0;
@@ -465,11 +466,11 @@ meter.is-visible {
 }
 
 #nieuwe-fouten-meter{
-    background-color: #FFFAF3;
+    background-color: #FFE0B3;
     
     background-image:conic-gradient(
         
-    #FFD08A calc(var(--p) * 1%),
+    #FF9800 calc(var(--p) * 1%),
         transparent 0
     );
 }
@@ -685,11 +686,11 @@ meter.is-visible {
     }
 
     #nieuwe-fouten-meter{
-        background-color: #FFFAF3;
+        background-color: #FFE0B3;
         
         background-image:conic-gradient(
             
-        #FFD08A calc(var(--p) * 1%),
+        #FF9800 calc(var(--p) * 1%),
             transparent 0
         );
     }
@@ -741,7 +742,7 @@ meter.is-visible {
     }
 }
 
-@media all and (min-width: 1100px) {
+@media all and (min-width: 750px) {
     main{
         position: absolute;
         background: var(--background-gray);
@@ -794,6 +795,16 @@ meter.is-visible {
         left: 50px;
         top: 300px;
         gap: 8px;
+    }
+
+    #nieuwe-fouten-meter{
+        background-color: #FFE0B3;
+        
+        background-image:conic-gradient(
+            
+        #FF9800 calc(var(--p) * 1%),
+            transparent 0
+        );
     }
 
 }
