--- a/styleguide/styleguide.css
+++ b/styleguide/styleguide.css
@@ -8,7 +8,7 @@ body{
 
     --main-font: "Outfit";
     
-    --first-font-color: #0257ff;
+    --first-font-color: #0275FF;
     --second-font-color: #5D666A;
     --third-font-color: #87929F;
     --background-gray: #F0F0F0;
